# hubbard

./: CMakeLists.txt
src/: hubbard.cpp  hubbard.h  main.cpp  matplotlibcpp.h  svdstack.h
src/util/: gnuplot.cpp  gnuplot.h
